# scalable-p1

./: .gitignore  Dockerfile
.github/workflows/: build-backend.yml
backend/: config.py  pyproject.toml  requirements.txt
backend/src/: __init__.py  models.py  routes.py  wsgi.py
benchmarks/: README.md  pyproject.toml  try_p1.py
k8s/: backend-deploy.yml  backend-svc.yml  ingress.yml  mariadb-deploy.yml  mariadb-service.yml  persistent-vol-claim.yml  persistent-vol.yml  recents-deploy.yml  recents-svc.yml  redis-deploy.yml  redis-svc.yml
