[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["suhavni <suhavni@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
SQLAlchemy = "^1.4.36"
Flask-SQLAlchemy = "^2.5.1"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
